<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoresLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deverman.puzzle.ScoresFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:id="@+id/tbScores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/tbRowHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPlaceHeader"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameHeader"
                android:layout_width="184dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/NameHeader"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesHeader"
                android:layout_width="183dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/MovesHeader"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tbRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtR1"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/R1"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameR1"
                android:layout_width="184dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesR1"
                android:layout_width="183dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tbRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtR2"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/R2"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameR2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesR2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tbRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtR3"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/R3"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameR3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesR3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tbRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtR4"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/R4"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameR4"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesR4"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tbRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtR5"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:text="@string/R5"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameR5"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMovesR5"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:lineSpacingExtra="24sp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtSuccessOrFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/etxtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbScores" />

    <EditText
        android:id="@+id/etxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSuccessOrFail" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtName"
        app:layout_constraintTop_toBottomOf="@+id/txtSuccessOrFail" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etxtName"
        app:layout_constraintTop_toBottomOf="@+id/tbScores"
        app:layout_constraintVertical_bias="0.897" />
</android.support.constraint.ConstraintLayout>
