<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deverman.puzzle.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnA1"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnA2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnA3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnA4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnB1"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnB2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnB3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnB4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnC1"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnC2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnC3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnC4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnD1"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnD2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnD3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnD4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="36dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="36dp"
        android:text="@string/save_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtMoveCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/move_count_label"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMoveCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtMoveCountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="40dp"
        android:countDown="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLoadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/load_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveGame"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/btnNewGame" />

</android.support.constraint.ConstraintLayout>
